# npg_porch_cli

./: .flake8  CHANGELOG.md  README.md  pow  pyproject.toml
.github/workflows/: test.yml
src/npg_porch_cli/: __init__.py  api.py  api_cli_user.py  config.py  npg_porch_client.py
tests/: test_api.py  test_porch_client_config.py  test_send_request.py
tests/data/: conf.ini  porch_openapi.json
