[tool.poetry]
name = "npg_porch_cli"
version = "0.0.1"
authors = [
    "Marina Gourtovaia",
    "Kieron Taylor",
    "Jennifer Liddle",
]
description = "CLI client for communicating with npg_porch JSON API"
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"
isort = { version = "^5.10.1", extras = ["colors"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
